Tue Jan 21 16:52:35 2003  Gary Wong  <gtw@gnu.org>

	* set.c (CommandSetGUIWindowPositions): New function.  Make restoring
	window positions optional, for use with window/session managers that 
	can do the job.

	* gtkgame.c: Don't use the deprecated gtk_window_set_wmclass(); call
	gtk_window_set_role() instead (under GTK+ 2.0).

	* gtksplash.c (CreateSplash): Use GDK_WINDOW_TYPE_HINT_SPLASHSCREEN
	under GTK+ 2.0, and add a couple of borders in case the window
	manager decides not to decorate us.

Tue Jan 21 14:49:29 2003  Gary Wong  <gtw@gnu.org>

	* eval.c (EvalKey): Bug fixes for cubeful equity caching: always
	perform cubeful key consideration for cube decisions (even if
	the evalcontext says it's cubeless), and don't take the one's
	complement for cubeful equities, since that gives -1 in trivial
	cases (which apparently means something special to lib/hash.c).

	* eval.c (EvaluatePositionCache, EvaluatePositionCubeful3): Don't
	try a cache lookup if the cache size is 0.

Sun Jan 19 10:20:32 2003  Gary Wong  <gtw@gnu.org>

	* renderprefs.c: #define M_PI, if necessary (reported by Nardy
	Pillards).

Sat Jan 18 23:14:56 2003  Gary Wong  <gtw@gnu.org>

	* renderprefs.c, renderprefs.h: New files.  Allow "set appearance"
	commands when GTK+ is not present.
	* gtkprefs.c: Modify rdAppearance settings.
	* gtkboard.c: Use rdAppearance settings.
	* gnubg.c (CommandSaveSettings): Save appearance settings when
	GTK+ is not present.
	* export.c (CommandExportPositionPNG): Allow user-defined renderdata.
	* htmlimages.c (CommandExportHTMLImages): Allow user-defined
	renderdata.
	
	* gtkgame.c (OptionsPages): Move some of the GUI-specific
	preferences here.
	* set.c (CommandSetGUIAnimationBlink, CommandSetGUIAnimationNone,
	CommandSetGUIAnimationSlide, CommandSetGUIAnimationSpeed,
	CommandSetGUIBeep, CommandSetGUIDiceArea, CommandSetGUIHighDieFirst,
	CommandSetGUIIllegal, CommandSetGUIShowIDs, CommandSetGUIShowPips):
	New functions.
